add channel/group filter for playlist API
